Bug fixes
fixed bug where the menu would not close on selecting a link.

fixed a bug where the contact form was not centered.

--- a/src/Pages/Contact/_index.scss
+++ b/src/Pages/Contact/_index.scss
@@ -43,6 +43,9 @@
 	.contactFormContainer {
 		flex: 1;
 		padding-right: 1rem;
+		@include mq(medium) {
+			padding-right: 0;
+		}
 	}
 	.inputGroup {
 		margin-bottom: 3rem;
