--- a/src/sass/_global-styles.scss
+++ b/src/sass/_global-styles.scss
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap');
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 body {
